меняет текст на главной странице

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
   <body>
     <header class="page-header">
       <div class="container">
-      Контакты в шапке
+      ooligors@gmail.com
+        +380989360256
         </div>.
     </header>
 
     <section class="hero-image">
       <div class="container">
-      <h1 class="heading">Неопознанный Енот</h1>
+      <h1 class="heading">Myronets Orysya</h1>
       <p>Junior верстальщик</p>
         </div>
     </section>
