--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <body>
     <header class="page-header">
       <div class="container">
-      ooligors@gmail.com
-        +380989360256
+      <a class="header-email" href="mailto:ooligors@gmail.com">ooligors@gmail.com</a>
+        <a class="header-phone"href="tel:+380989360256">+380989360256</a>
         </div>.
     </header>
 
@@ -26,6 +26,9 @@
     <section class="intro">
       <div class="container">
       <h2 class="subheading">Давайте познакомимся</h2>
+      <figure class="user-image">
+  <img src="files/user.jpg" width="928" height="536" alt="Фотография Неопознанного Енота">
+</figure>
       <h3>Пара слов о себе</h3>
       <p>Текст с парой слов о себе.</p>
       <h3>Чем могу быть полезен</h3>
@@ -36,10 +39,12 @@
     <section class="portfolio">
       <div class="container">
       <h2 class="subheading">Мои работы</h2>
-
+      <figure class="project-image">
+        <img src="files/project.jpg" width="928" height="536" alt="Cайт магазина товаров для дома">
+      </figure>
       <h3>Магазин товаров для дома</h3>
       <p>Мой первый сайт.</p>
-
+      <a class="button" href="source/project/project-gloevk/index.html">Открыть страницу</a>
       <h3>Блог начинающего верстальщика</h3>
       <p>Статический блог про обучение HTML и CSS.</p>
       </div>
@@ -47,7 +52,8 @@
 
     <footer class="page-footer">
       <div class="container">
-      Контакты в подвале
+        <a class="footer-email" href="mailto:ooligors@gmail.com">ooligors@gmail.com</a>
+        <a class="footer-phone" href="tel:+380989360256">+380989360256</a>
       </div>
     </footer>
   </body>
